initial commit : updated files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <!-- Dashboard Section -->
         <section id="dashboard">
             <h2>Main Dashboard</h2>
+    <label for="city-search">Search for a city:</label>
+    <input type="text" id="city-search" placeholder="Enter city name" />
+    <button id="city-search-button">Search</button>
             <div id="data-display">
                 <div id="charts">
                     <canvas id="lineChart"></canvas>
@@ -54,7 +57,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Air Quality Dashboard | <a href="#resources">Resources</a></p>
+        <p>&copy; 2024 Air Quality Dashboard</p>
     </footer>
     <script src="script.js"></script>
 </body>
